--- a/boxing_todo/Cargo.toml
+++ b/boxing_todo/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2021"
 json = "0.12.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[source.crates-io]
+registry = "https://github.com/rust-lang/crates.io-index"
+replace-with = 'sjtu-mirror'
+
+[source.sjtu-mirror]
+registry = "https://mirrors.sjtug.sjtu.edu.cn/git/crates.io-index.git"
