--- a/macro_calculator/Cargo.toml
+++ b/macro_calculator/Cargo.toml
@@ -8,3 +8,18 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+json = "0.12.4"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
