--- a/matrix_ops/Cargo.toml
+++ b/matrix_ops/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "matrix"
+name = "matrix_ops"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 lalgebra_scalar = { path = "../lalgebra_scalar"}
+matrix = { path = "../matrix"}
